[project]
name = "test-task-sber-dev"
version = "0.1.0"
description = ""
authors = [
    {name = "Raisin228",email = "bogdanatrosenko@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11,<3.15"
dependencies = [
    "numpy (>=2.4.6,<3.0.0)",
    "torch (>=2.12.0,<3.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
